--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@nuxt/image": "2.0.0",
     "@nuxt/scripts": "0.13.0",
     "@nuxt/ui": "4.2.1",
+    "@pinia/nuxt": "^0.11.3",
+    "@primevue/nuxt-module": "^4.5.0",
+    "@primevue/themes": "^4.5.0",
     "@unhead/vue": "^2.0.3",
     "better-sqlite3": "^12.5.0",
     "chart.js": "^4.5.1",
@@ -27,9 +30,10 @@
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.5.0",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.6.3",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   }
 }
